@@ -5,3 +5,8 @@
 
 This section describes the changes between version 2.4 and version 2.4.
 See <<change-history>> for changes in previous versions.
+
+==== @RabbitListener Changes
+
+`MessageProperties` is now available for argument matching.
+See <<async-annotation-driven-enable-signature>> for more information.
